--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smartpick",
-  "version": "0.2.9",
+  "version": "0.3.0",
   "description": "Smart text selection toolbar for Obsidian",
   "author": "BCS",
   "main": "main.js",
@@ -23,6 +23,7 @@
     "builtin-modules": "^3.3.0",
     "esbuild": "^0.19.0",
     "eslint": "^8.0.0",
+    "eslint-plugin-obsidianmd": "^0.1.9",
     "obsidian": "latest",
     "typescript": "^5.3.0"
   },
